Bug 187555 - underlining of urls is wrong if scrollbar is on the left
Summary: underlining of urls is wrong if scrollbar is on the left
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.2.1
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-03-18 23:05 UTC by jarauh
Modified: 2009-05-09 20:42 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description jarauh 2009-03-18 23:05:24 UTC
Version:           2.2.1 (using 4.2.1 (KDE 4.2.1), Gentoo)
Compiler:          i686-pc-linux-gnu-gcc
OS:                Linux (i686) release 2.6.25-gentoo-r7

If the scrollbar is on the left hand side of konsole, then the line under urls (when the mouse hovers over them) is misplaced exactly by the width of the scrollbar.
Comment 1 Kurt Hindenburg 2009-05-09 20:42:08 UTC
SVN commit 965773 by hindenburg:

Correct underlining URLs when scrollbar is on the left.

BUG: 187555


 M  +39 -19    TerminalDisplay.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=965773