Correct underlining URLs when scrollbar is on the left.

BUG: 187555

svn path=/trunk/KDE/kdebase/apps/konsole/; revision=965773